2011-02-06 Malignant Manor <malignantmanor@users.sourceforge.net>
	* actors.cc, combat.cc, shapes/items.h: Fix starving message.
		Add some message constants.

2011-02-06 Malignant Manor <malignantmanor@users.sourceforge.net>
	* actors.cc, combat.cc: Make sure non-party members equip a shield
		if they have one and aren't using a two handed weapon.

2011-02-06 Malignant Manor <malignantmanor@users.sourceforge.net>
	* actors.cc: Fix ready_best_weapon not equipping dragon breath
		and some spells because they are backpack or rhand ready type.
		Added more shield equipping checks.

2011-02-04 Malignant Manor <malignantmanor@users.sourceforge.net>
	* schedule.cc: Don't have shape 846 (naga) use different dancing
		frames unless the game is SI.
	* objs/objs.cc: Fix missing spell scroll de-hard-coding in SI.
		(Also used in other games even though it seems unnecessary)

2011-02-02 Malignant Manor <malignantmanor@users.sourceforge.net>
	* schedule.cc: Add missing eat schedule saying in non-SI games.
	* actors.cc: Allow freezing (0x9e - 0xc5) and magebane
		(0x9b - 0x9d) messages in all games. They get added to
		%%section msgs of textmsg.txt. See docs/siitems.txt for more
		information about the messages Subtract 0x400 from siitems
		to get the correct textmsg number.

2011-02-01 Malignant Manor <malignantmanor@users.sourceforge.net>
	* gumps/GameplayOptions_gump.cc: Make face stats work properly in
		the Exult menu. Bug 3169747

2011-01-31 Malignant Manor <malignantmanor@users.sourceforge.net>
	* gamedat.cc: Don't return newlines in get_game_identity and
		get_game_identity_zip.

2011-01-29 Malignant Manor <malignantmanor@users.sourceforge.net>
	* combat.cc: Fix regression in 5915 that caused an endless loop.
		Bug 3131920

2011-01-27 Malignant Manor <malignantmanor@users.sourceforge.net>
	* gamedat.cc, gumps/Newfile_gump.cc: Dev games now use
		exult??dev.sav instead of exult??si.sav for saved game names.
